Add new method to get all content of folder
